--- a/project/jobs/templates/jobs/background_job_status.html
+++ b/project/jobs/templates/jobs/background_job_status.html
@@ -27,12 +27,12 @@
   <li>
     <ul>
       <li>
-        <span class="tooltip" title="Duration from scheduled start time to actual start time">
+        <span class="tooltip" title="Duration from scheduled start time to actual start time" id="time-waited-line">
           Time waited before starting: {{ recent_wait_time_interval.0|timedelta_display }} ~ {{ recent_wait_time_interval.1|timedelta_display }}
         </span>
       </li>
       <li>
-        <span class="tooltip" title="Duration from scheduled start time to finish time">
+        <span class="tooltip" title="Duration from scheduled start time to finish time" id="total-time-line">
           Total time: {{ recent_total_time_interval.0|timedelta_display }} ~ {{ recent_total_time_interval.1|timedelta_display }}
         </span>
       </li>
