Backend overview: sources that haven't been checked recently are considered normal and not a concern now, so don't color them blue and move them to the bottom.

--- a/project/vision_backend/templates/vision_backend/overview.html
+++ b/project/vision_backend/templates/vision_backend/overview.html
@@ -3,14 +3,14 @@
 
 {% block css-code %}
 <style>
-tr.source-row.needs_check {
-  background-color: var(--status-color-pending);
-}
 tr.source-row.caught_up {
   background-color: var(--status-color-done);
 }
 tr.source-row.needs_processing {
   background-color: var(--status-color-in-progress);
+}
+tr.source-row.unchecked {
+  /* No color */
 }
 </style>
 {% endblock %}
