Add clarification on 'need classification' to backend overview.

--- a/project/vision_backend/templates/vision_backend/overview.html
+++ b/project/vision_backend/templates/vision_backend/overview.html
@@ -38,6 +38,10 @@ tr.source-row.unchecked {
 </table>
 
 <div class="line">
+  * = Images that need reclassification with an updated classifier are part of 'Unconfirmed'.
+</div>
+
+<div class="line">
   There are {{clf_stats.nclassifiers}} trained classifiers out of which {{clf_stats.nacceptedclassifiers}} are accepted. This means there are on average {{clf_stats.accepted_ratio}} accepted classifiers per each of the {{clf_stats.nsources}} sources.
 </div>
 
