Calcification help text wording edits.
Per discussion with Travis Courtney.

--- a/project/calcification/templates/calcification/help_rates.html
+++ b/project/calcification/templates/calcification/help_rates.html
@@ -28,9 +28,9 @@
   <a href="https://github.com/traviscourtney/CoralNetCalcificationRatesV2/" target="_blank">https://github.com/traviscourtney/CoralNetCalcificationRatesV2/</a>
 </p>
 
-<p>We encourage using these default tables, though you may want to create a custom table for your source (using the default as a starting point) if...</p>
+<p>We encourage using these default tables, though you may want to edit the default tables to create a custom table for your source if...</p>
 <ul>
-  <li>The default tables don't cover the world region your data is from.</li>
+  <li>You have locally derived calcification or bioerosion rates to substitute for the default regional values.</li>
   <li>The default table for your region is missing some of the labels you use. When computing image-level rates, missing labels are assumed to have a rate of 0.</li>
-  <li>Your data has non-carbonate rocks. The CoralNet default rates for rock, bare reef substrate, rubble, and algal covered hard substrate assume that all such rocks are calcium carbonate. If they are non-carbonate, your custom table should specify a rate of 0 for such rocks.</li>
+  <li>Your data has non-carbonate rocks. The CoralNet default rates for rock, bare reef substrate, rubble, and algal covered hard substrate assume that all such rocks are calcium carbonate and subject to bioerosion. If they are non-carbonate, your custom table should specify a rate of 0 for such rocks.</li>
 </ul>
