--- a/project/calcification/templates/calcification/grid_of_tables.html
+++ b/project/calcification/templates/calcification/grid_of_tables.html
@@ -38,7 +38,7 @@
     {% for rate_table in global_calcification_tables %}
       <tr>
         <td class="name">{{ rate_table.name }}</td>
-        <td class="description"></td>
+        <td class="description">{{ rate_table.description }}</td>
         <td class="actions">
           <form
             action="{% url 'calcification:rate_table_download' rate_table.pk %}"
