Annotation CSVs: Support including both label IDs and label short codes.
Have an option for this in export, and have support for this in upload (IDs take precedence if both are present).

--- a/project/annotations/templates/annotations/help_export_csv.html
+++ b/project/annotations/templates/annotations/help_export_csv.html
@@ -10,10 +10,10 @@
   <li><strong>Name</strong>: The name of the image that the annotation is for.</li>
   <li><strong>Row</strong>: Pixel y-position from the top edge of the image.</li>
   <li><strong>Column</strong>: Pixel x-position from the left edge of the image.</li>
-  <li><strong>Label code</strong> or <strong>Label ID</strong>: Label applied to the point.</li>
+  <li><strong>Label code</strong> and/or <strong>Label ID</strong>: Label applied to the point.</li>
 </ul>
 
-<p>The <em>Label format</em> option determines whether labels are written as labelset-defined short codes, or as site-wide label ID numbers. Short codes are more human-readable, while ID numbers can be useful because they are source-independent and very rarely change.</p>
+<p>The <em>Label format</em> option determines whether labels are written as labelset-defined short codes, as site-wide label ID numbers, or both. Short codes are more human-readable, while ID numbers can be useful because they are source-independent and very rarely change.</p>
 
 <p>There are also optional sets of columns available:</p>
 
