API job list view (admin facing): optimize DB queries.
The status fetching logic here is now partly redundant with the ApiJob.full_status property, but not sure how to clean that up yet.

--- a/project/api_management/templates/api_management/job_list.html
+++ b/project/api_management/templates/api_management/job_list.html
@@ -49,7 +49,7 @@ td.failure {
           </a>
         </td>
         <td>{{ job.create_date }}</td>
-        <td>{{ job.user }}</td>
+        <td>{{ job.user__username }}</td>
         <td>{{ job.type }}</td>
         <td>{{ job.overall_status }}</td>
         <td>{{ job.pending_units|add:job.in_progress_units }}</td>
