Small modernizations of maintenance-notice command code.
Old use of root /templates dir, old Python 2.x note, import line spacing, format strings.

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -86,7 +86,7 @@
   </head>
   <body>
     <div id="top">
-      {% include "maintenance_notice.html" %}
+      {% include "lib/maintenance_notice.html" %}
       {% if messages %}
       <ul class="messages">
         {% for message in messages %}
