--- a/project/lib/templates/lib/maintenance_notice.html
+++ b/project/lib/templates/lib/maintenance_notice.html
@@ -1,24 +1,20 @@
-{% load get_maintenance_time time_is_past from common_tags %}
+{% load get_maintenance_details time_is_past from common_tags %}
 
-{% get_maintenance_time as maintenance_time %}
+{% get_maintenance_details as maintenance_details %}
 
-{% if maintenance_time %}
-    <div class="maintenance_message">
-        {% if maintenance_time|time_is_past %}
-            {# The message when the site is currently under maintenance. #}
-            <b>The site is under maintenance.</b>
-            During maintenance, the site may abruptly become unavailable,
-            and certain pages may not work properly. If you're going to
-            upload or change anything, we advise you to use the site at
-            a later time. We’re sorry for the inconvenience.
-        {% else %}
-            {# The message when the site is going to be under maintenance #}
-            {# at a particular time. #}
-            The site will be under maintenance in
-            <b>{{ maintenance_time|timeuntil }}.</b>
-            If you're working on something, please wrap it up soon
-            and resume when maintenance is over.
-            Sorry for the inconvenience.
-        {% endif %}
-    </div>
+{% if maintenance_details %}
+  <div class="maintenance_message">
+    {% if maintenance_details.time|time_is_past %}
+      {# The message when the site is currently under maintenance. #}
+      {{ maintenance_details.message|safe }}
+    {% else %}
+      {# The message when the site is going to be under maintenance #}
+      {# at a particular time. #}
+      The site will be under maintenance in
+      <strong>{{ maintenance_details.time|timeuntil }}.</strong>
+      If you're working on something, please wrap it up soon
+      and resume when maintenance is over.
+      Sorry for the inconvenience.
+    {% endif %}
+  </div>
 {% endif %}
