Browse: Have the search form omit blank params from submission.
This'll result in cleaner URLs when the search form uses GET.

Actual implementation is in Javascript, by disabling the blank fields just before form submission is processed.

--- a/project/visualization/templates/visualization/browse_search_form.html
+++ b/project/visualization/templates/visualization/browse_search_form.html
@@ -1,6 +1,6 @@
-<form action="" method="post" class="no-padding" id="search-form">
-  {% csrf_token %}
+{% load static %}
 
+<form action="" method="get" class="no-padding" id="search-form">
   <div class="center-box-wrapper">
     <div class="form-box">
       {{ form }}
@@ -11,3 +11,9 @@
     </div>
   </div>
 </form>
+
+<script type="module">
+  import BrowseSearchHelper from "{% static 'js/BrowseSearchHelper.js' %}";
+  BrowseSearchHelper.setupSearchSubmitLogic(
+      document.getElementById('search-form'));
+</script>
