Upload images: after upload, have the metadata-edit link use an image ID range parameter instead of a list of IDs parameter.
This ensures that the parameter length doesn't grow unbounded as more images are uploaded at once.

Also have this and "Upload more images" be GET links instead of POST submissions.

Note: Image ID range is not foolproof, since it can get images outside of the upload set if there are concurrent uploads in the same source. But not sure if the problem is big enough to warrant crafting a more complex solution.

--- a/project/upload/templates/upload/upload_images.html
+++ b/project/upload/templates/upload/upload_images.html
@@ -28,69 +28,7 @@
       <span class="helptext">{{ auto_generate_points_message|linebreaksbr }}</span>
     </div>
 
-    <div class="page-section">
-
-      {% comment %}
-      These fields aren't going to get submitted directly,
-      so they're not in a form element.
-      {% endcomment %}
-      {{ images_form }}
-
-    </div>
-
-    <div class="page-section">
-
-      <div id="upload_summary_section">
-
-        <span id="status_display"></span>
-        <hr>
-        <span id="pre_upload_summary"></span>
-
-        <div id="files_table_auto_scroll_checkbox_container">
-          <input type="checkbox" id="files_table_auto_scroll_checkbox" checked>
-          <label for="files_table_auto_scroll_checkbox">Auto-scroll to the currently uploading file</label>
-        </div>
-
-        {# Table showing the files selected for upload. #}
-        <div id="files_table_container">
-          <table id="files_table"></table>
-        </div>
-
-        <span id="mid_upload_summary"></span>
-      </div>
-
-
-      <div id="upload_and_proceed_buttons">
-
-        {# start/abort upload #}
-        <button type="button" class="submit red" id="id_upload_submit" disabled="disabled">Start upload</button>
-        <button type="button" class="submit red" id="id_upload_abort_button" disabled="disabled">Abort upload</button>
-
-        {# start another upload #}
-        <form action="" method="get" id="id_start_another_upload_form"
-        class="no-padding">
-          <input type="submit" class="red" value="Upload more images" id="id_start_another_upload_button" />
-          <p class="helptext_small">Upload another set of images.</p>
-        </form>
-
-        {# proceed to the page where you manage image metadata #}
-        <form action="{% url 'edit_metadata' source.id %}" method="post"
-              id="id_proceed_to_manage_metadata_form" class="no-padding">
-          {% csrf_token %}
-
-          {% for field in proceed_to_manage_metadata_form %}
-            {{ field }}
-          {% endfor %}
-
-          <input type="submit" class="red" value="Manage image metadata"
-                 name="image_specify_form_from_upload"
-                 id="id_proceed_to_manage_metadata_button"/>
-          <p class="helptext_small">View and edit the metadata of the images you just uploaded.</p>
-        </form>
-
-      </div>
-
-    </div>
+    {% include 'upload/upload_images_main_elements.html' with images_form=images_form %}
 
   </div>
 
