Batch delete images/annotations: compare the deletion count with the search result count to double check, and abort if they don't match.
We have a true "time of deletion" count for delete images, since it uses the number returned by the deletion call. But for delete annotations, the count is taken just *before* deleting annotations. I couldn't think of a way to make the latter also a "true" count without greatly sacrificing performance.

--- a/project/visualization/templates/visualization/browse_images_actions.html
+++ b/project/visualization/templates/visualization/browse_images_actions.html
@@ -259,6 +259,8 @@
         {% if hidden_image_form %}
 
           {% csrf_token %}
+          {{ result_count_form }}
+
           <div class="line">
             Permanently deletes the images in this image set, along with their annotations. When you click "Go", a confirmation dialog will pop up.
           </div>
@@ -283,6 +285,8 @@
         {% if hidden_image_form %}
 
           {% csrf_token %}
+          {{ result_count_form }}
+
           <div class="line">
             Permanently deletes any existing annotations for these images. The images themselves and their point locations will not be affected. When you click "Go", a confirmation dialog will pop up.
           </div>
