--- a/project/visualization/templates/visualization/browse_images.html
+++ b/project/visualization/templates/visualization/browse_images.html
@@ -52,7 +52,7 @@
     {% endfor %}
 
     {# Pagination info and links #}
-    {% include 'pagination_links.html' with query_string=query_string page_results=page_results %}
+    {% include 'pagination_links.html' with page_results=page_results %}
 
     {% if can_see_actions %}
       {% include 'visualization/browse_images_actions.html' with hidden_image_form=hidden_image_form %}
