CPC upload: check for the 1000-file limit in the UI, and display an appropriate message when you go over that, instead of resulting in a cryptic server error.

--- a/project/cpce/templates/cpce/upload.html
+++ b/project/cpce/templates/cpce/upload.html
@@ -60,7 +60,8 @@
   <script type="text/javascript">
     UploadAnnotationsCPCHelper.initForm({
         uploadPreviewUrl: "{% url 'cpce:upload_preview_ajax' source.id %}",
-        uploadStartUrl: "{% url 'cpce:upload_confirm_ajax' source.id %}"
+        uploadStartUrl: "{% url 'cpce:upload_confirm_ajax' source.id %}",
+        maxFiles: {{ upload_max_files }},
     });
   </script>
 
