Browse help text: use <kbd> instead of <code> for the input examples since that's a somewhat closer fit, for both semantics and current style.

--- a/project/visualization/templates/visualization/help_browse.html
+++ b/project/visualization/templates/visualization/help_browse.html
@@ -14,11 +14,11 @@
 
 <ul>
   <li>The "Sort by" and "Direction" fields let you change the ordering of the search results.</li>
-  <li>The "Image name contains" field accepts punctuation, and accepts multiple search terms separated by spaces. So you can use search queries like <code>dsc_ .jpg</code> or <code>dupe-name</code>.</li>
+  <li>The "Image name contains" field accepts punctuation, and accepts multiple search terms separated by spaces. So you can use search queries like <kbd>.jpg dsc_</kbd> or <kbd>dupe-name</kbd>.</li>
   <li>
     If some of your images have values filled in for the auxiliary metadata fields, those metadata fields will appear on the search form. This will typically appear as a dropdown field, but it will be a text-input field if the source has a large number of unique values for that field.
     <ul>
-      <li>If it's a text-input field, entering <code>(none)</code> will search for blank values.</li>
+      <li>If it's a text-input field, entering <kbd>(none)</kbd> will search for blank values.</li>
     </ul>
   </li>
 </ul>
