--- a/project/visualization/templates/visualization/help_browse.html
+++ b/project/visualization/templates/visualization/help_browse.html
@@ -56,5 +56,7 @@
   Mouse-over an image patch to see which image and which point the patch is
   from.</p>
 
+<p>If the search contains a very high number of annotations, it can be slow to count all the results, so we limit the result count if it's too high. The pagination text will show something like "Showing 1-20 out of 20000 or more" if this is the case.</p>
+
 
 </div>
