--- a/project/lib/templates/lib/about.html
+++ b/project/lib/templates/lib/about.html
@@ -245,6 +245,11 @@
     </p>
     <ul>
         <li><p>
+            S. Sannassy Pilly, J. E. Townsend, C. A. Alisa, T. B. Razak, R. C. Roche, J. R. Turner, S. Chan, D. J. Kriegman, A. J. Andersson, C. T. Perry, I. D. Lange, T. A. Courtney.
+            <i><a href="https://doi.org/10.1007/s00338-025-02620-1">"Quantifying coral reef carbonate budgets: a comparison between ReefBudget and CoralNet"</a></i>.
+            Coral Reefs, March 17, 2025.
+        </p></li>
+        <li><p>
             T. Courtney, H. Barkley, S. Chan, C. Couch, T. Kindinger, T. Oliver, D. Kriegman, A. Andersson.
             <i><a href="https://aslopubs.onlinelibrary.wiley.com/doi/abs/10.1002/lno.12159">
                 "Rapid assessments of Pacific Ocean net coral reef carbonate budgets and net calcification following the 2014-2017 global coral bleaching event"</a></i>.
