Help text dialogs: modernize JS code, clean up no-longer-used bits, and refactor associated templates.
This includes cleaning up a totally unused click handler in AnnotationToolSettingsHelper.js.

--- a/project/static/css/master.css
+++ b/project/static/css/master.css
@@ -667,6 +667,10 @@ ul.errorlist li {
        when the user clicks a button. */
     display: none;
 }
+img.help-button {
+    display: inline;
+    cursor: pointer;
+}
 
 
 /* Special cases */
